<resources>
    <string name="app_name">Haryana Electricity</string>
    <string name="username">Username</string>
    <string name="pswrd">Password</string>
    <string name="login">Login</string>
    <string name="pending">Pending</string>
    <string name="resolved">Resolved</string>
    <string name="welcome">Welcome</string>
    <string name="toastinternetmsg">No Internet Connection</string>
    <string name="toastlocationmsg">Please enable your GPS from notification bar.</string>
    <string name="toastcategorymsg">Please select a category</string>
    <string name="toastaddressmsg">Location Not Found</string>
    <string name="toastusernamepassfillmsg">Please Enter Username and Password</string>
    <string name="toastusernamefillmsg">Please Enter Username</string>
    <string name="toastpasswordfillmsg">Please Enter Password</string>
    <string name="toastincorrectpass">Incorrect Password</string>
    <string name="toastusernamepassincorrectmsg">The login credentials you entered is incorrect</string>
    <string name="toastnotauthorisedmsg">You are not authorised to login</string>
    <string name="toasttryagainmsg">Please Try Again</string>
    <string name="logout">Logout</string>
    <string name="kiosk_menu">Kiosk Mode</string>
    <string name="kiosk">Kiosk Mode is active</string>
    <string name="kiosk_off">Kiosk Mode is deactive</string>
    <string name="changelanguage">Change Language</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="chooselanguage">Choose Language</string>
    <string name="name">Name:</string>
    <string name="mobile">Mobile:</string>
    <string name="address">Address:</string>
    <string name="customerid">Customer ID:</string>
    <string name="description">Description:</string>
    <string name="complaincategory">Complain Category:</string>
    <string name="reporteddate">Reported Date:</string>
    <string name="resolvedate">Resolved Date:</string>
    <string name="nopendingreq">No Complaint</string>
    <string name="noresolve">No Resolved</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="dialogtext">Are you sure,you have resolved this issue?</string>
    <string name="dialogexit">Are you sure,you want to Exit?</string>
    <string name="dialoglogout">Are you sure,you want to Logout?</string>
    <string name="dialogcall">Are you sure,you want to make call?</string>
    <string name="gpsheading">GPS Settings</string>
    <string name="gpspopupcontent">Please enable your GPS by clicking on Settings button below</string>
</resources>
