<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_top_selling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:background="@color/white"
        android:clickable="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/text_color"

                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mohan Kumar Mishra"
                        android:textColor="@color/grey" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/calling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:clickable="false"
                    android:linksClickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:textColor="@color/text_color"
                        android:textStyle="bold" />
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/textmobno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="+919555575231"
        android:autoLink="phone"
        android:clickable="false"
        android:linksClickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textColor="@color/grey" />

</RelativeLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/text_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbladdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="G-19 Krishna Apra, Netaji Subahsh Place. Pitam Pura New Delhi -110034"
                    android:textColor="@color/grey" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>